--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "bee",
   "main": "index.js",
   "scripts": {
-     "webpack-watch": "webpack -w",
-     "express-server": "node ./server",
-     "dev": "concurrent --kill-others \"npm run webpack-watch\" \"npm run express-server\"",
-     "test": "echo \"Error: no test specified\" && exit 1"
-   },
+    "webpack-watch": "webpack -w",
+    "express-server": "node ./server",
+    "dev": "concurrent --kill-others \"npm run webpack-watch\" \"npm run express-server\"",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --config webpack.config.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/suosuo2953/lucky-tail.git"
@@ -29,9 +30,10 @@
     "babel-preset-stage-0": "^6.22.0",
     "babel-register": "^6.24.0",
     "express": "^4.15.2",
+    "http-proxy": "^1.16.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "webpack": "^2.3.1"
+    "webpack": "^2.3.2"
   },
   "devDependencies": {
     "concurrently": "^3.4.0"
