--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "babel-preset-react": "^6.24.1",
     "eslint": "^3.19.0",
     "express": "^4.15.2",
+    "file-loader": "^0.11.1",
     "material-ui": "^0.17.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
+    "react-tap-event-plugin": "^2.0.1",
     "webpack": "^2.4.1"
   },
   "devDependencies": {
@@ -42,6 +44,7 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.0",
     "eslint": "^3.19.0",
     "eslint-plugin-react": "^6.10.3",
