--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "./node_modules/.bin/webpack -d --progress --colors --config webpack/webpack.dev.config.js",
-    "start": "node app/app.js",
-    "clean": "rimraf dist"
+    "start-app": "node app/app.js",
+    "clean": "rimraf dist",
+    "stats": "./node_modules/.bin/webpack --profile --json > stats.json --config webpack/webpack.dev.config.js",
+    "start": "./node_modules/.bin/webpack-dev-server --config webpack/webpack.dev.config.js"
   },
   "repository": {
     "type": "git",
@@ -54,6 +56,7 @@
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
     "webpack-dev-middleware": "^1.10.2",
+    "webpack-dev-server": "^2.4.5",
     "webpack-hot-middleware": "^2.18.0"
   }
 }
