--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "./node_modules/.bin/webpack -d --progress --colors --config webpack/webpack.dev.config.js",
     "start-app": "node app/app.js",
     "clean": "rimraf dist",
+    "dev": "webpack-dev-server --config webpack/webpack.dev.config.js",
     "stats": "./node_modules/.bin/webpack --profile --json > stats.json --config webpack/webpack.dev.config.js",
     "start-dev-server": "./node_modules/.bin/webpack-dev-server --config webpack/webpack.dev.config.js"
   },
@@ -34,9 +35,11 @@
     "material-ui": "^0.17.4",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-redux": "^5.0.4",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
     "webpack": "^2.4.1"
   },
   "devDependencies": {
@@ -44,6 +47,7 @@
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.0.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
